# matrix_class

./: .lab1.cpp.swp  .tags  CMakeLists.txt  armidillo.cpp  filter_final.pgm  image.pgm  image2.pgm  image_test.pgm  lab1.cpp  lab1.cpp.html  multiplication.c  name.pgm  output.pgm  problem1.pgm  problem2.pgm  problem2_hor.pgm  problem2_ver.pgm
